<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="saobracajniznakovi.com.saobracajniznakovi.MainActivity"
    tools:showIn="@layout/activity_main">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/katalog_saob_znakova"
        android:id="@+id/main_button1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="mainButton1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/specifikacija"
        android:id="@+id/main_button2"
        android:layout_below="@+id/main_button1"
        android:layout_marginTop="10dp"
        android:onClick="mainButton2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pravilnik"
        android:id="@+id/main_button3"
        android:layout_below="@+id/main_button2"
        android:layout_marginTop="10dp"
        android:onClick="mainButton3"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zobs"
        android:id="@+id/main_button4"
        android:layout_below="@+id/main_button3"
        android:layout_marginTop="10dp"
        android:onClick="mainButton4"/>

</RelativeLayout>
